--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <body style="margin:0;">
 
-  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/zDGYRYQgcxU?si=L1rymC1hL5cXUHq9?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  
+<iframe width="100%" height="100%" 
+    src="https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=0" 
+    title="YouTube video player" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+</iframe>
+
 </body>
 </html>
