--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body style="margin:0;">
 
 <iframe width="100%" height="100%" 
-    src="https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=0" 
+    src="https://www.youtube.com/embed/zDGYRYQgcxU&autoplay=1&mute=0" 
     title="YouTube video player" frameborder="0" 
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
