--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <body style="margin:0;">
 
 <iframe width="100%" height="100%" 
-    src="https://www.youtube.com/embed/ijTNBZszvJ0?si=WSr6FzQAZwj0Z0bu&autoplay=0&mute=0" 
+    src="https://www.youtube.com/embed/ijTNBZszvJ0?si=WSr6FzQAZwj0Z0bu&autoplay=1&mute=0" 
     title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay=0; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 
 </iframe>
