--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <body style="margin:0;">
 
-<iframe width="100%" height="100%" 
-    src="https://www.youtube.com/embed/ijTNBZszvJ0?si=WSr6FzQAZwj0Z0bu&autoplay=1&mute=0" 
-    title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+<iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/TfuNwm3D3Qc?si=Oi1Ybty4EQ-fmV5a&autoplay=1"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen></iframe>
 
 </iframe>
  
