--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
 <body style="margin:0;">
 
-<iframe width="560" height="315" 
-  src="https://www.youtube.com/embed/TfuNwm3D3Qc?si=Oi1Ybty4EQ-fmV5a&autoplay=1"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen></iframe>
+<iframe id="ytplayer" width="100%" height="100%" 
+    src="https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=0" 
+    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+</iframe>
+
+<button onclick="unmuteVideo()">Unmute</button>
+
+<script>
+    function unmuteVideo() {
+        var iframe = document.getElementById("ytplayer");
+        iframe.src = "https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=0";
+    }
+</script>
 
 </iframe>
  
