--- a/slc.html
+++ b/slc.html
@@ -2,18 +2,10 @@
 <body style="margin:0;">
 
 <iframe id="ytplayer" width="100%" height="100%" 
-    src="https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=1" 
+    src="https://www.youtube.com/embed/jJZnziRAyac?si=0Qlzq0C3KXC0y0pt?autoplay=1&mute=1" 
     frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
 
-<button onclick="unmuteVideo()">Unmute</button>
-
-<script>
-    function unmuteVideo() {
-        var iframe = document.getElementById("ytplayer");
-        iframe.src = "https://www.youtube.com/embed/zDGYRYQgcxU?autoplay=1&mute=0";
-    }
-</script>
  
 </body>
 </html>
