--- a/slc.html
+++ b/slc.html
@@ -1,10 +1,7 @@
 <html>
 <body style="margin:0;">
 
-<iframe id="ytplayer" width="100%" height="100%" 
-    src="https://www.youtube.com/embed/jJZnziRAyac?si=0Qlzq0C3KXC0y0pt?autoplay=1&mute=1" 
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-</iframe>
+<iframe id="ytplayer" width="100%" height="100%" src="https://www.youtube.com/embed/jJZnziRAyac?si=0Qlzq0C3KXC0y0pt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
  
 </body>
